--- a/funcao_calcula_IMC.html
+++ b/funcao_calcula_IMC.html
@@ -20,7 +20,7 @@
     }
 
 
-    var informeNome = prompt("Informe seu nome querido(a)");
+    var informeNome = prompt("Informe seu nome");
     var alturaInformada = prompt(informeNome + ", Informe sua altura");
     var pesoInformado = prompt(informeNome + ", Informe seu peso");
 
